# server/API/v1/routes/analysisRouter.mjs
@@ -4,17 +4,22 @@ import {
   createAnalysis,
   getAllAnalyses,
   getSingleAnalysisData,
+  participateInAnalysis,
 } from '../../../controllers/analysisController.mjs';
 import { createAnalysisSchema } from '../../../utils/validators/createAnalysisSchema.mjs';
 import { sanitizerResult } from '../../../middlewares/sanitizerResult.mjs';
+import { checkAuthentication } from '../../../middlewares/authenticationChecker.mjs';
+import { checkPermissionByRole } from '../../../middlewares/permissionByRoleChecker.mjs';
 
 export const analysisRouter = Router();
 
-analysisRouter.post('/', checkSchema(createAnalysisSchema), sanitizerResult, createAnalysis);
+analysisRouter.post('/', checkAuthentication(), checkPermissionByRole('customer'), checkSchema(createAnalysisSchema), sanitizerResult, createAnalysis);
 
-analysisRouter.get('/', getAllAnalyses);
+analysisRouter.post('/participate', participateInAnalysis);
 
-analysisRouter.get('/:id', getSingleAnalysisData);
+analysisRouter.get('/', checkAuthentication(), checkPermissionByRole('customer'), getAllAnalyses);
+
+analysisRouter.get('/:id', checkAuthentication(), checkPermissionByRole('customer'), getSingleAnalysisData);
 
 analysisRouter.use('/*fallback', (req, res) => {
   res.status(404).json({
